#2695 fix: improve delete functionality with multiple OR conditions and enh… (#2760)
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>
Co-authored-by: Luca Garulli <lvca@users.noreply.github.com>

(cherry picked from commit 1cac4b8d1889088714f0428d9903c291f043a6bb)