@@ -170,11 +170,8 @@ public class SelectExecutionPlanner {
     if (info.timeout != null)
       selectExecutionPlan.chain(new AccumulatingTimeoutStep(info.timeout, context));
 
-    if (useCache &&
-        !context.isProfiling() &&
-        statement.executionPlanCanBeCached() &&
-        selectExecutionPlan.canBeCached() &&
-        db.getExecutionPlanCache().getLastInvalidation() < planningStart)
+    if (useCache && !context.isProfiling() && statement.executionPlanCanBeCached() && selectExecutionPlan.canBeCached()
+        && db.getExecutionPlanCache().getLastInvalidation() < planningStart)
       db.getExecutionPlanCache().put(statement.getOriginalStatement(), selectExecutionPlan);
 
     return selectExecutionPlan;
@@ -235,12 +232,12 @@ public class SelectExecutionPlanner {
    */
   protected static Projection translateDistinct(Projection projection) {
     if (projection != null && projection.getItems().size() == 1) {
-      if (isDistinct(projection.getItems().get(0))) {
+      if (isDistinct(projection.getItems().getFirst())) {
         projection = projection.copy();
-        final ProjectionItem item = projection.getItems().get(0);
+        final ProjectionItem item = projection.getItems().getFirst();
         final FunctionCall function = ((BaseExpression) item.getExpression().getMathExpression()).getIdentifier().getLevelZero()
             .getFunctionCall();
-        final Expression exp = function.getParams().get(0);
+        final Expression exp = function.getParams().getFirst();
         final ProjectionItem resultItem = new ProjectionItem(-1);
         resultItem.setAlias(item.getAlias());
         resultItem.setExpression(exp.copy());
@@ -311,7 +308,7 @@ public class SelectExecutionPlanner {
     if (!isMinimalQuery(info))
       return false;
 
-    result.chain(new CountFromTypeStep(info.target.toString(), info.projection.getAllAliases().get(0), context));
+    result.chain(new CountFromTypeStep(info.target.toString(), info.projection.getAllAliases().getFirst(), context));
     return true;
   }
 
@@ -333,7 +330,7 @@ public class SelectExecutionPlanner {
     if (!isMinimalQuery(info)) {
       return false;
     }
-    result.chain(new CountFromIndexStep(targetIndex, info.projection.getAllAliases().get(0), context));
+    result.chain(new CountFromIndexStep(targetIndex, info.projection.getAllAliases().getFirst(), context));
     return true;
   }
 
@@ -353,7 +350,7 @@ public class SelectExecutionPlanner {
         || info.projection.getItems().size() != 1) {
       return false;
     }
-    final ProjectionItem item = info.aggregateProjection.getItems().get(0);
+    final ProjectionItem item = info.aggregateProjection.getItems().getFirst();
     return item.getExpression().toString().equalsIgnoreCase("count(*)");
   }
 
@@ -363,7 +360,7 @@ public class SelectExecutionPlanner {
             .count() != 1) {
       return false;
     }
-    final ProjectionItem item = info.aggregateProjection.getItems().get(0);
+    final ProjectionItem item = info.aggregateProjection.getItems().getFirst();
     final Expression exp = item.getExpression();
     if (exp.getMathExpression() != null && exp.getMathExpression() instanceof BaseExpression) {
       final BaseExpression base = (BaseExpression) exp.getMathExpression();
@@ -377,7 +374,7 @@ public class SelectExecutionPlanner {
         || projection.getItems().size() != 1) {
       return false;
     }
-    final ProjectionItem item = aggregateProjection.getItems().get(0);
+    final ProjectionItem item = aggregateProjection.getItems().getFirst();
     return item.getExpression().isCount();
   }
 
@@ -417,7 +414,7 @@ public class SelectExecutionPlanner {
         result.chain(new AggregateProjectionCalculationStep(info.aggregateProjection, info.groupBy, aggregationLimit, context,
             info.timeout != null ? info.timeout.getVal().longValue() : -1));
         if (isCountOnly(info) && info.groupBy == null) {
-          result.chain(new GuaranteeEmptyCountStep(info.aggregateProjection.getItems().get(0), context));
+          result.chain(new GuaranteeEmptyCountStep(info.aggregateProjection.getItems().getFirst(), context));
         }
       }
       result.chain(new ProjectionCalculationStep(info.projection, context));
@@ -527,7 +524,7 @@ public class SelectExecutionPlanner {
   private static void addOrderByProjections(final QueryPlanningInfo info) {
     if (info.orderApplied || info.expand || info.unwind != null || info.orderBy == null || info.orderBy.getItems().size() == 0
         || info.projection == null || info.projection.getItems() == null || (info.projection.getItems().size() == 1
-        && info.projection.getItems().get(0).isAll())) {
+        && info.projection.getItems().getFirst().isAll())) {
       return;
     }
 
@@ -949,7 +946,7 @@ public class SelectExecutionPlanner {
       return result;
 
     //TODO optimization: merge multiple conditions
-    for (final BooleanExpression booleanExpression : flattenedWhereClause.get(0).getSubBlocks()) {
+    for (final BooleanExpression booleanExpression : flattenedWhereClause.getFirst().getSubBlocks()) {
       if (isRidRange(booleanExpression, context)) {
         result.getSubBlocks().add(booleanExpression.copy());
       }
@@ -1093,7 +1090,7 @@ public class SelectExecutionPlanner {
       } else if (info.flattenedWhereClause.size() > 1) {
         throw new CommandExecutionException("Index queries with this kind of condition are not supported yet: " + info.whereClause);
       } else {
-        final AndBlock andBlock = info.flattenedWhereClause.get(0);
+        final AndBlock andBlock = info.flattenedWhereClause.getFirst();
         if (andBlock.getSubBlocks().size() == 1) {
 
           info.whereClause = null;//The WHERE clause won't be used anymore, the index does all the filtering
@@ -1618,7 +1615,7 @@ public class SelectExecutionPlanner {
     final List<DocumentType> stack = new ArrayList<>();
     stack.add(typez);
     while (!stack.isEmpty()) {
-      final DocumentType current = stack.remove(0);
+      final DocumentType current = stack.removeFirst();
       traversed.add(current);
       for (final DocumentType sub : current.getSubTypes()) {
         if (traversed.contains(sub))
@@ -1699,7 +1696,7 @@ public class SelectExecutionPlanner {
       final QueryPlanningInfo info, final CommandContext context, List<IndexSearchDescriptor> optimumIndexSearchDescriptors) {
     List<ExecutionStepInternal> result;
     if (optimumIndexSearchDescriptors.size() == 1) {
-      final IndexSearchDescriptor desc = optimumIndexSearchDescriptors.get(0);
+      final IndexSearchDescriptor desc = optimumIndexSearchDescriptors.getFirst();
       result = new ArrayList<>();
 
       final Boolean orderAsc = getOrderDirection(info);
@@ -1782,8 +1779,8 @@ public class SelectExecutionPlanner {
       if (orderItems.isEmpty()) {
         return true;//nothing to sort, the conditions completely overlap the ORDER BY
       }
-      if (s.equals(orderItems.get(0))) {
-        orderItems.remove(0);
+      if (s.equals(orderItems.getFirst())) {
+        orderItems.removeFirst();
         overlapping = true; //start overlapping
       } else if (overlapping) {
         return false; //overlapping, but next order item does not match...
@@ -1908,7 +1905,7 @@ public class SelectExecutionPlanner {
     if (sortedDescriptors.isEmpty()) {
       descriptors = Collections.emptyList();
     } else {
-      descriptors = sortedDescriptors.stream().filter(x -> x.getFirst().equals(sortedDescriptors.get(0).getFirst()))
+      descriptors = sortedDescriptors.stream().filter(x -> x.getFirst().equals(sortedDescriptors.getFirst().getFirst()))
           .map(Pair::getSecond).collect(Collectors.toList());
     }
 
@@ -1916,7 +1913,7 @@ public class SelectExecutionPlanner {
     descriptors = descriptors.stream().sorted(Comparator.comparingInt(x -> x.blockCount())).collect(Collectors.toList());
 
     // get the one that has more indexed fields
-    return descriptors.isEmpty() ? null : descriptors.get(descriptors.size() - 1);
+    return descriptors.isEmpty() ? null : descriptors.getLast();
   }
 
   /**
@@ -1961,12 +1958,19 @@ public class SelectExecutionPlanner {
 
     // get all valid index descriptors
     List<IndexSearchDescriptor> descriptors = indexes.stream()
-        .map(index -> buildIndexSearchDescriptor(context, index, block, clazz)).filter(Objects::nonNull)
-        .filter(x -> x.keyCondition != null).filter(x -> !x.getSubBlocks().isEmpty()).collect(Collectors.toList());
+        .map(index -> buildIndexSearchDescriptor(context, index, block, clazz))
+        .filter(Objects::nonNull)
+        .filter(x -> x.keyCondition != null)
+        .filter(x -> !x.getSubBlocks().isEmpty())
+        .collect(Collectors.toList());
 
-    final List<IndexSearchDescriptor> fullTextIndexDescriptors = indexes.stream().filter(idx -> idx.getType().equals(FULL_TEXT))
-        .map(idx -> buildIndexSearchDescriptorForFulltext(context, idx, block, clazz)).filter(Objects::nonNull)
-        .filter(x -> x.keyCondition != null).filter(x -> !x.getSubBlocks().isEmpty()).toList();
+    final List<IndexSearchDescriptor> fullTextIndexDescriptors = indexes.stream()
+        .filter(idx -> idx.getType().equals(FULL_TEXT))
+        .map(idx -> buildIndexSearchDescriptorForFulltext(context, idx, block, clazz))
+        .filter(Objects::nonNull)
+        .filter(x -> x.keyCondition != null)
+        .filter(x -> !x.getSubBlocks().isEmpty())
+        .toList();
 
     descriptors.addAll(fullTextIndexDescriptors);
 
@@ -1976,21 +1980,27 @@ public class SelectExecutionPlanner {
 
     // sort by cost
     final List<Pair<Integer, IndexSearchDescriptor>> sortedDescriptors = descriptors.stream()
-        .map(x -> (Pair<Integer, IndexSearchDescriptor>) new Pair(x.cost(context), x)).sorted().collect(Collectors.toList());
+        .map(x -> (Pair<Integer, IndexSearchDescriptor>) new Pair(x.cost(context), x))
+        .sorted()
+        .toList();
 
     // get only the descriptors with the lowest cost
     if (sortedDescriptors.isEmpty()) {
       descriptors = Collections.emptyList();
     } else {
-      descriptors = sortedDescriptors.stream().filter(x -> x.getFirst().equals(sortedDescriptors.get(0).getFirst()))
-          .map(x -> x.getSecond()).collect(Collectors.toList());
+      descriptors = sortedDescriptors.stream()
+          .filter(x -> x.getFirst().equals(sortedDescriptors.getFirst().getFirst()))
+          .map(x -> x.getSecond())
+          .toList();
     }
 
     // sort remaining by the number of indexed fields
-    descriptors = descriptors.stream().sorted(Comparator.comparingInt(x -> x.getSubBlocks().size())).collect(Collectors.toList());
+    descriptors = descriptors.stream()
+        .sorted(Comparator.comparingInt(x -> x.getSubBlocks().size()))
+        .toList();
 
     // get the one that has more indexed fields
-    return descriptors.isEmpty() ? null : descriptors.get(0);
+    return descriptors.isEmpty() ? null : descriptors.getLast();
   }
 
   /**
@@ -2368,7 +2378,7 @@ public class SelectExecutionPlanner {
       info.orderApplied = true;
 
     if (buckets.size() == 1) {
-      final Bucket parserBucket = buckets.get(0);
+      final Bucket parserBucket = buckets.getFirst();
 
       Integer bucketId = parserBucket.getBucketNumber();
       if (bucketId == null) {
@@ -2424,7 +2434,7 @@ public class SelectExecutionPlanner {
       return false;
 
     if (info.orderBy.getItems().size() == 1) {
-      OrderByItem item = info.orderBy.getItems().get(0);
+      OrderByItem item = info.orderBy.getItems().getFirst();
       String recordAttr = item.getRecordAttr();
       return recordAttr != null && recordAttr.equalsIgnoreCase(RID_PROPERTY) && OrderByItem.DESC.equals(item.getType());
     }
@@ -2439,7 +2449,7 @@ public class SelectExecutionPlanner {
       return false;
 
     if (info.orderBy.getItems().size() == 1) {
-      final OrderByItem item = info.orderBy.getItems().get(0);
+      final OrderByItem item = info.orderBy.getItems().getFirst();
       final String recordAttr = item.getRecordAttr();
       return recordAttr != null && recordAttr.equalsIgnoreCase(RID_PROPERTY) && (item.getType() == null || OrderByItem.ASC.equals(
           item.getType()));
@@ -2491,7 +2501,7 @@ public class SelectExecutionPlanner {
 
     if (item.getRids() != null && !item.getRids().isEmpty()) {
       if (item.getRids().size() == 1) {
-        final PInteger bucket = item.getRids().get(0).getBucket();
+        final PInteger bucket = item.getRids().getFirst().getBucket();
         buckets.add(db.getSchema().getBucketById(bucket.getValue().intValue()).getName());
       } else {
         for (final Rid rid : item.getRids()) {
